THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.1.2
 - ADD: Abstracted template rendering into a function for easier swapping of rendering engine
 - ADD: Smarter filtering of files to support other templates Thanks 
 - ADD: Help command line agument
 - ADD: Version command line argument
 - ADD: Patterns only command line argument
 - ADD: IshControlsVisible options. Can now hide any ishControls you like.
 - ADD: Documented the command line interface
 - CHG: Put debug flag in conf.json instead of package.json
 - CHG: Aligned styleguide css with patternlab-php
 - FIX: Removed node .8 from travis
 - FIX: Code and annotation support in patternlab viewer
 - THX: thanks @ivanmayes and Shoptology crew for contibutions!

PL-node-v0.1.1
 - FIX: Removed View All Pattern SubItem Link Logic, no longer in reference implementation
 - ADD: Flag for generating debug file
 - ADD: Travis CI test support!
 - ADD: Contributing file
 - ADD: Repository to package.json
 - FIX: Manage Mustache dependency using NPM
 - THX: thank you @tbranyen for tip on repository, Mustache, and NPM!

PL-node-v0.1.0
 - FIX: Links to patterns did not work when visited from a server
 - FIX: Patterns with hyphens in the name were breaking the iframe messaging
 - FIX: Added stlyeguide/js files that were ignored at one point
 - FIX: Watch _data/*.json files too
 - FIX: Copy images, in an attempt to exclude files like Thumbs.db
 - FIX: Typos in CHANGELOG
 - ADD: A banner to patternlab.js

PL-node-v0.0.5
 - FIX: typo in organisms global header
 - FIX: flat-structured pattern items rendered as if they had sub-menus #4
 - ADD: Load all grunt tasks using matchdep
 - THX: thanks to @colynb for the typo heads up
 - THX: shoutout to @joemcgill for better dependency loading

PL-node-v0.0.4
 - ADD: An explicit MIT license
 - FIX: Clean public/patterns/ before build 

PL-node-v0.0.3
 - FIX: Install documentation was incomplete, should not have assumed grunt