@@ -1,7 +1,7 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-watch": "~0.2.0",
@@ -11,8 +11,11 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-nodeunit": "~0.3.0",
+    "grunt-contrib-connect": "^0.8.0",
     "mustache": "~0.8.1",
-    "matchdep": "~0.3.0"
+    "matchdep": "~0.3.0",
+    "fs-extra": "^0.10.0",
+    "diveSync": "^0.2.1"
   },
   "keywords": [
     "Pattern Lab",
@@ -28,7 +31,7 @@
   "author": "Brian Muenzenmeyer",
   "license": "MIT",
   "scripts": {
-    "test" : "grunt travis --verbose"
+    "test": "grunt travis --verbose"
   },
   "engines": {
     "node": ">=0.1"
